[gd_scene load_steps=4 format=3 uid="uid://qpedvr1uwrji"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_7jsuf"]
[ext_resource type="Texture2D" uid="uid://dgto4d1u4goyq" path="res://assets/sprites/Main.png" id="2_8oayf"]
[ext_resource type="Texture2D" uid="uid://cifcpvh6ojytq" path="res://assets/sprites/Title.png" id="3_jilxd"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7jsuf")
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="bg" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1088.0
texture = ExtResource("2_8oayf")

[node name="Title" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 752.0
offset_top = 184.0
offset_right = 1712.0
offset_bottom = 648.0
texture = ExtResource("3_jilxd")
expand_mode = 2
stretch_mode = 4

[node name="ButtonsContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 704.0
offset_bottom = 384.0

[node name="Start" type="Button" parent="ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Exit")
focus_neighbor_bottom = NodePath("../Settings")
theme_override_font_sizes/font_size = 60
text = "Start"

[node name="Settings" type="Button" parent="ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Start")
focus_neighbor_bottom = NodePath("../Exit")
theme_override_font_sizes/font_size = 60
text = "Settings"

[node name="Exit" type="Button" parent="ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Settings")
focus_neighbor_bottom = NodePath("../Start")
theme_override_font_sizes/font_size = 60
text = "Exit"

[connection signal="pressed" from="ButtonsContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="ButtonsContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="ButtonsContainer/Exit" to="." method="_on_exit_pressed"]
